--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>五道街进行时 - 天水桥南五道街</title>
+    <title>网站地图 - 天水桥南五道街</title>
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js" defer></script>
 </head>
@@ -20,42 +20,35 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">首页</a></li>
-                <li><a href="events.html" class="active">五道街进行时</a></li>
+                <li><a href="events.html">五道街进行时</a></li>
                 <li><a href="about.html">关于五道街</a></li>
-                <li><a href="sitemap.html">网站地图</a></li>
+                <li><a href="sitemap.html" class="active">网站地图</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="events-hero">
-            <h2>五道街进行时</h2>
-            <p>了解五道街最新动态，参与精彩活动</p>
+        <section class="sitemap-hero">
+            <h2>网站地图</h2>
+            <p>快速导航至网站各个页面</p>
         </section>
 
-        <section class="timeline">
-            <div class="event">
-                <div class="event-date">2023-10-15</div>
-                <div class="event-content">
-                    <h3>美食节开幕</h3>
-                    <p>五道街美食节盛大开幕，50+特色美食摊位等你来品尝</p>
-                </div>
+        <section class="sitemap-content">
+            <div class="sitemap-section">
+                <h3>主要页面</h3>
+                <ul>
+                    <li><a href="index.html">首页</a></li>
+                    <li><a href="events.html">五道街进行时</a></li>
+                    <li><a href="about.html">关于五道街</a></li>
+                </ul>
             </div>
 
-            <div class="event">
-                <div class="event-date">2023-10-20</div>
-                <div class="event-content">
-                    <h3>街头艺术表演</h3>
-                    <p>来自全国各地的街头艺术家将在五道街进行精彩表演</p>
-                </div>
-            </div>
-
-            <div class="event">
-                <div class="event-date">2023-10-25</div>
-                <div class="event-content">
-                    <h3>购物狂欢节</h3>
-                    <p>五道街商家联合推出年度最大折扣活动</p>
-                </div>
+            <div class="sitemap-section">
+                <h3>实用信息</h3>
+                <ul>
+                    <li><a href="index.html#contact">联系我们</a></li>
+                    <li><a href="index.html#social-media">社交媒体</a></li>
+                </ul>
             </div>
         </section>
     </main>
